# adventofcode-2022

./: README.md
conan-cmake-cppfront/: CMakeLists.txt  conanfile.py
day01/: CMakeLists.txt  conanfile.py
day01/src/: main.cpp  main.cpp2
